--- a/SaperBW/MainWindow.xaml
+++ b/SaperBW/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SaperBW"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="MainWindow" Height="500" Width="500">
+    <Grid x:Name="plansza">
 
     </Grid>
 </Window>
